--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-OPENAI_API_KEY=
-QDRANT_URL=
-QDRANT_API_KEY=
-NEON_DB_URL=
+OPENAI_API_KEY=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
+QDRANT_URL=https://91a2698c-e9cf-458c-b84b-c6acdfdaed37.us-east4-0.gcp.cloud.qdrant.io
+QDRANT_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.kFfH0sCtDtwE6tIHZwWK4pdwMUnr_vy-XgFmS1hYaiE
+NEON_DB_URL=postgresql://neondb_owner:npg_MjNyDvSC10sb@ep-cool-dew-ahri1ybl-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+GEMINI_API_KEY=AIzaSyA4gtasOsoGVbyqwEeckGESnAlnl1G_TWg
